@@ -44,4 +44,6 @@
 	   Bridge Implementation GetTaker return PTakerInfo;
 	   Updated MainForm according to this changes;
 08/07/2024 Main Form Buttons use ImageList and some adjustments
-09/07/2024 Rotate/Flip Preprocessing filters
+09/07/2024 Rotate/Flip Preprocessing filters;
+	   Load/SavePageSettings (Rotate and Flip); 
+	   Twain 32bit Comm executable debug name -dbg
